add scrip to control buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,95 @@
-html {
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+.section {
+  transform: translateY(-100%) scale(0);
+  transition: all 0.4s ease-in-out;
+  background-color: #191d2b;
+}
+
+.sec1 {
+  display: none;
+  transform: translateY(0) scale(1);
+}
+
+.main .sec2,
+.main .sec3,
+.main .sec4,
+.main .sec5 {
+  display: none;
+  transform: translateY(0) scale(1);
+}
+
+.controls {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  right: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+}
+.controls .active-btn {
+  background-color: #27ae60;
+  transition: all 0.4s ease-in-out;
+}
+.controls .active-btn i {
+  color: #ffffff;
+}
+.controls .control {
+  padding: 1rem;
+  cursor: pointer;
+  background-color: #454e56;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.7rem 0;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+}
+.controls .control i {
+  font-size: 1.2rem;
+  color: #b2becd;
+  pointer-events: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
+body {
+  background-color: #191d2b;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  color: #ffffff;
+  transition: all 0.4s ease-in-out;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+  font-family: inherit;
+}
+
+header {
+  height: 100vh;
+  color: #ffffff;
+  overflow: hidden;
+}
+
+section {
+  min-height: 100vh;
   width: 100%;
-  margin: auto;
-  padding: 3rem;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 3rem 18rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
