--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,1 +1,77 @@
-$color-main: red;
+@use "mixins";
+//  colour variables
+$color-primary: #191d2b;
+$color-secondary: #27ae60;
+$color-white: #ffffff;
+$color-black: #000;
+$color-grey0: #f8f8f8;
+$color-grey-1: #dbe1e8;
+$color-grey-2: #b2becd;
+$color-grey-3: #6c7983;
+$color-grey-4: #454e56;
+$color-grey-5: #2a2e35;
+$color-grey-6: #12181b;
+$br-sm-2: 14px;
+$box-shadow-1: 0 3px 15px rgba(0, 0, 0, .3);
+
+// Sections
+.section{
+    transform: translateY(-100%) scale(0);
+    transition: all .4s ease-in-out;
+    background-color: $color-primary;
+
+}
+
+//  Header Section
+.sec1{
+    @include mixins.sections();
+}
+
+// Sections into main
+.main {
+    .sec2,
+    .sec3,
+    .sec4,
+    .sec5 {
+        @include mixins.sections();
+    }
+}
+
+// Controls buttons
+.controls{
+    position: fixed;
+    z-index: 10;
+    top: 50%;
+    right: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-50%);
+    .active-btn{
+        background-color: $color-secondary;
+        transition: all .4s ease-in-out;
+        i {
+            color: $color-white;
+        }
+    }
+    .control {
+        padding: 1rem;
+        cursor: pointer;
+        background-color: $color-grey-4;
+        width: 55px;
+        height: 55px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: .7rem 0;
+        box-shadow: $box-shadow-1;
+        i {
+            font-size: 1.2rem;
+            color: $color-grey-2;
+            pointer-events: none;
+        }
+    }
+}
+
