--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,6 +1,28 @@
-@mixin section-display($bg-color: #f1f1f1) {
-    width: 100%;
-    // max-width: 992px;
-    margin: auto;
-    padding: 3rem;
+
+// Colours Root
+@mixin variables-root {
+    $color-primary: #191d2b;
+    $color-secondary: #27ae60;
+    $color-white: #ffffff;
+    $color-black: #000;
+    $color-grey0: #f8f8f8;
+    $color-grey-1: #dbe1e8;
+    $color-grey-2: #b2becd;
+    $color-grey-3: #6c7983;
+    $color-grey-4: #454e56;
+    $color-grey-5: #2a2e35;
+    $color-grey-6: #12181b;
+    $br-sm-2: 14px;
+}
+
+@mixin links {
+    display:  inline-block;
+    text-decoration: none;
+    color: inherit;
+    font-family: inherit;
+}
+
+@mixin sections {
+    display: none;
+    transform: translateY(0) scale(1);
 }
