--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -1,44 +1,10 @@
-@use "components";
-@use "mixins";
+@use "components" as *;
+
+@use "variables";
+
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	list-style: none;
-}
 
-:root{
-    @include mixins.variables-root();
-}
 
-body {
-    background-color: components.$color-primary;
-	font-family: "Poppins", sans-serif;
-    font-size: 1.1rem;
-    color: components.$color-white;
-    transition: all .4s ease-in-out;
-}
-
-a {
-    @include mixins.links();
-}
-
-header {
-    height: 100vh;
-    color: components.$color-white;
-    overflow: hidden;
-}
-
-section {
-    min-height: 100vh;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 3rem 18rem;
-
-}
 
