--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,6 +1,5 @@
 @use "mixins";
 
-
 * {
 	margin: 0;
 	padding: 0;
@@ -19,12 +18,12 @@
 	--color-grey-4: #454e56;
 	--color-grey-5: #2a2e35;
 	--color-grey-6: #12181b;
-    --br-sm-2: 14px;
-    --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
+	--br-sm-2: 14px;
+	--box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
 }
 
 .light-mode {
-    --color-primary: #ffffff;
+	--color-primary: #ffffff;
 	--color-secondary: #ff0055;
 	--color-white: #454e56;
 	--color-black: #000;
@@ -53,7 +52,7 @@ header {
 	min-height: 100vh;
 	color: var(--color-white);
 	overflow: hidden;
-    padding: 0;
+	padding: 0;
 }
 
 section {
@@ -66,11 +65,11 @@ section {
 }
 
 // Sections
-.section{
-    display: none;
-    transform: translateY(0) scale(1);
-    transition: all .4s ease-in-out;
-    background-color: var(--color-primary);
+.section {
+	display: none;
+	transform: translateY(0) scale(1);
+	transition: all 0.4s ease-in-out;
+	background-color: var(--color-primary);
 }
 
 .active {
@@ -114,13 +113,13 @@ section {
 			color: var(--color-grey-2);
 			pointer-events: none;
 		}
-    }
-    .active-btn {
-        background-color: var(--color-secondary);
-        transition: all 0.4s ease-in-out;
-        i {
-            color: var(--color-white);
-        }
+	}
+	.active-btn {
+		background-color: var(--color-secondary);
+		transition: all 0.4s ease-in-out;
+		i {
+			color: var(--color-white);
+		}
 	}
 }
 
@@ -138,7 +137,7 @@ section {
 	align-items: center;
 	box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
 	transition: all 0.1s ease-in-out;
-    
+
 	&:active {
 		transform: translateY(-5px);
 	}
@@ -170,23 +169,23 @@ section {
 			z-index: -1;
 			clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
 		}
-		.image {
+	}
+	.image {
+		border-radius: var(--br-sm-2);
+		height: 100vh;
+		width: 100%;
+		margin-left: 7rem;
+		// background-color: var(--color-black);
+		transition: all 0.4s ease-in-out;
+		img {
 			border-radius: var(--br-sm-2);
-			height: 90%;
-			width: 68%;
-			margin-left: 4rem;
-			background-color: var(--color-black);
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
 			transition: all 0.4s ease-in-out;
-			img {
-				border-radius: var(--br-sm-2);
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				transition: all 0.4s ease-in-out;
-				filter: grayscale(100%);
-				&:hover {
-					filter: grayscale(0);
-				}
+			filter: grayscale(100%);
+			&:hover {
+				filter: grayscale(0);
 			}
 		}
 	}
@@ -197,18 +196,18 @@ section {
 		justify-content: center;
 		padding-right: 18rem;
 	}
-    .name {
-        font-size: 3rem;
-        span {
-            color: var(--color-secondary);
-        }
-    }
-    p {
-        margin: 1.5rem 0;
-        line-height: 2rem;
-    }
+	.name {
+		font-size: 3rem;
+		span {
+			color: var(--color-secondary);
+		}
+	}
+	p {
+		margin: 1.5rem 0;
+		line-height: 2rem;
+	}
 }
-	// right side of the header
+// right side of the header
 
 // ABOUT SECTION
 .about-container {
@@ -671,7 +670,7 @@ section {
 		z-index: -1;
 	}
 	&:hover {
-        transition: all 0.4s ease-in;
+		transition: all 0.4s ease-in;
 		&::before {
 			width: 100%;
 			height: 100%;
