--- a/css/styles.css
+++ b/css/styles.css
@@ -169,23 +169,22 @@ section {
   z-index: -1;
   clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
 }
-.header-content .left-header .image {
+.header-content .image {
   border-radius: var(--br-sm-2);
-  height: 90%;
-  width: 68%;
-  margin-left: 4rem;
-  background-color: var(--color-black);
+  height: 100vh;
+  width: 100%;
+  margin-left: 7rem;
   transition: all 0.4s ease-in-out;
 }
-.header-content .left-header .image img {
+.header-content .image img {
   border-radius: var(--br-sm-2);
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: all 0.4s ease-in-out;
   filter: grayscale(100%);
 }
-.header-content .left-header .image img:hover {
+.header-content .image img:hover {
   filter: grayscale(0);
 }
 .header-content .right-header {
