--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,110 +1,59 @@
-@media screen and (max-width: 767px) {
-	header {
-		padding: 0;
-	}
-	// header .right-header {
-	//     padding: 2rem !important;
-	// }
-
-	.about-container {
-		grid-template-columns: 1fr;
-		.right-about {
-			grid-template-columns: 1fr;
-			padding-top: 2.5rem;
-		}
-		.left-about {
-			padding-right: 0;
-			padding-top: 0;
-		}
-	}
-
-	.timeline {
-		grid-template-columns: 1fr;
-		padding-bottom: 6rem;
-	}
-
-	.about-stat {
-		.progress-bars {
-			grid-template-columns: 1fr;
-		}
-	}
-
-	.portfolio {
-		.portfolios {
-			grid-template-columns: 1fr;
-			padding-bottom: 6rem;
-		}
-	}
-
-	.blogs-content {
-		.blogs {
-			grid-template-columns: 1fr;
-			padding-bottom: 6rem;
-		}
-	}
-
-	.contact-content-con {
-		flex-direction: column;
-		.right-contact {
-			margin-left: 0;
-			margin-top: 2.5rem;
-		}
-	}
-
-	.contact-content-con .right-contact .i-c-2 {
-		flex-direction: column;
-	}
-
-	.contact-content-con .right-contact .i-c-2 :last-child {
-		margin-left: 0;
-		margin-top: 1.5rem;
-	}
-
-	.section {
-		padding: 2rem 2.5rem;
-	}
-
-	.main-title {
-		h2 {
-			font-size: 2rem;
-			span {
-				font-size: 2.5rem;
-			}
-			.bg-text {
-				font-size: 3rem;
-			}
-		}
-	}
-
-	.theme-btn {
-		width: 40px;
-		height: 40px;
-	}
-}
-
 @media screen and (max-width: 1432px) {
 	header {
 		padding: 0;
 	}
 	.section {
-		padding: 7rem 8rem 7rem 5rem;
-	}
-
-	.contact-content-con {
-		flex-direction: column;
-		.right-contact {
-			margin-left: 0;
-			margin-top: 2.5rem;
+		.contact-container {
+			width: 80%;
+			margin: 0 auto;
+			.main-title {
+				h2 {
+					font-size: 3rem;
+					.bg-text {
+						transform: translate(-50%, -50%);
+						font-size: 4rem;
+					}
+				}
+			}
+			// Content
+			.contact-content-con {
+				flex-direction: column;
+				position: absolute;
+				left: 25vw;
+				width: 50vw;
+        gap: 1rem;
+				.left-contact {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					.contact-info {
+						width: 45vw;
+						padding: 2.7rem 0;
+					}
+					.contact-icon {
+						margin: 3rem 0;
+					}
+				}
+				.right-contact {
+					// margin-left: 0;
+					margin: 0 auto;
+					h4 {
+						width: 45vw;
+					}
+					.contact-form {
+						width: 45vw;
+						margin-bottom: 4rem;
+					}
+					.i-c-2 {
+						flex-direction: column;
+					}
+					.i-c-2 :last-child {
+						margin-left: 0;
+						margin-top: 1.5rem;
+					}
+				}
+			}
 		}
-	}
-
-	.contact-content-con .right-contact .i-c-2 {
-		flex-direction: column;
-	}
-
-	.contact-content-con .right-contact .i-c-2 :last-child {
-		margin-left: 0;
-		margin-top: 1.5rem;
 	}
 }
 
@@ -113,60 +62,127 @@
 		padding: 0;
 	}
 	.section {
-		padding: 7rem 8rem 7rem 5rem;
-	}
-	.about-container {
-		grid-template-columns: 1fr;
-		.right-about {
-			padding-top: 2.5rem;
+		padding: 4rem 8rem 7rem 5rem;
+		.about-container {
+			grid-template-columns: 1fr;
+			.right-about {
+				padding-top: 2.5rem;
+			}
+		}
+
+		.portfolios {
+			grid-template-columns: 1fr 1fr;
+		}
+		.blogs {
+			grid-template-columns: 1fr 1fr;
+		}
+
+		.main-title {
+			h2 {
+				font-size: 3rem;
+				.bg-text {
+					font-size: 5rem;
+				}
+			}
+		}
+		.contact-container {
+			.contact-content-con {
+				margin-top: 2rem;
+				left: 23vw;
+        gap: 1rem;
+				.left-contact {
+					.contact-info {
+						width: 46vw;
+					}
+				}
+				.right-contact {
+					.contact-form {
+						.submit-btn {
+							justify-content: center;
+							margin-left: 0;
+						}
+					}
+				}
+			}
 		}
 	}
-
-	.portfolios {
-		grid-template-columns: 1fr 1fr;
+	.controls {
+		.control {
+			width: 3rem;
+			height: 3rem;
+		}
 	}
-	.blogs {
-		grid-template-columns: 1fr 1fr;
-	}
-
-	.main-title {
-		h2 {
-			font-size: 4rem;
-			span {
-				font-size: 4rem;
-			}
-			.bg-text {
-				font-size: 5rem;
-			}
+	.theme-btn {
+		width: 3rem;
+		height: 3rem;
+		i {
+			font-size: 1.5rem;
 		}
 	}
 }
 
 @media screen and (max-width: 970px) {
 	.section {
-		padding: 7rem 6rem;
-	}
+		padding: 4rem 2.5rem;
 
-	.header-content {
-		grid-template-columns: 1fr;
-		padding-bottom: 6rem;
+		.header-content {
+			grid-template-columns: 1fr;
+			padding-bottom: 6rem;
 
-		.left-header {
-			.h-shape {
-				display: none;
+			.left-header {
+				.h-shape {
+					display: none;
+				}
+				.image {
+					margin: 0 auto;
+					width: 70%;
+					height: 60vh;
+				}
 			}
-			.image {
-				margin: 0 auto;
+			.right-header {
+				padding: 0;
+				grid-row: 1;
 				width: 90%;
+				margin: 0 auto;
+				.name {
+					font-size: 2rem;
+					p {
+						text-align: justify;
+					}
+				}
 			}
 		}
-		.right-header {
-			padding: 0;
-			grid-row: 1;
-			width: 90%;
-			margin: 0 auto;
-			.name {
-				font-size: 2.5rem;
+		.contact-container {
+			width: 75%;
+			.contact-content-con {
+				position: inherit;
+				gap: 0;
+				width: 100%;
+				.left-contact {
+					.contact-info {
+						width: 58vw;
+					}
+					.contact-icon {
+						margin: 0rem 0rem 3rem 0rem;
+					}
+				}
+				.right-contact {
+					display: flex;
+					flex-direction: column;
+					h4 {
+						width: 50vw;
+					}
+					.contact-form {
+						.input-control {
+							margin: 1.5rem 0;
+						}
+						width: 50vw;
+						margin-bottom: 4rem;
+						// .submit-btn {
+						// 	margin-left: 8rem;
+						// }
+					}
+				}
 			}
 		}
 	}
@@ -182,6 +198,201 @@
 		background-color: var(--color-grey-5);
 		.control {
 			margin: 0.5rem 1rem;
+			width: 3rem;
+			height: 3rem;
+		}
+	}
+	.theme-btn {
+		width: 2rem;
+		height: 2rem;
+		i {
+			font-size: 1rem;
+		}
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.section {
+		padding: 3.5rem 2.5rem;
+		header {
+			padding: 0;
+		}
+
+		.main-title {
+			h2 {
+				font-size: 2rem;
+				.bg-text {
+					font-size: 3rem;
+				}
+			}
+		}
+
+		.about-container {
+			grid-template-columns: 1fr;
+			padding-top: 5rem;
+			.right-about {
+				grid-template-columns: 1fr;
+				padding-top: 2.5rem;
+			}
+			.left-about {
+				padding-right: 0;
+				padding-top: 0;
+				h4 {
+					margin-left: 1rem;
+					font-size: 1.5rem;
+				}
+			}
+		}
+
+		.timeline {
+			grid-template-columns: 1fr;
+			padding-bottom: 6rem;
+		}
+
+		.about-stat {
+			.progress-bars {
+				grid-template-columns: 1fr;
+			}
+		}
+
+		.portfolio {
+			.portfolios {
+				grid-template-columns: 1fr;
+				padding-bottom: 6rem;
+			}
+		}
+
+		.blogs-content {
+			.blogs {
+				grid-template-columns: 1fr;
+				padding-bottom: 6rem;
+			}
+		}
+		.contact-container {
+			width: 90%;
+			.contact-content-con {
+				flex-direction: column;
+				margin-bottom: 1rem;
+
+				.left-contact {
+					position: inherit;
+					font-size: 1rem;
+					h4 {
+						width: 100%;
+						margin-top: 0;
+						font-size: 1.5rem;
+						text-transform: uppercase;
+						text-align: center;
+					}
+					p {
+						text-align: justify;
+					}
+					.contact-info {
+						width: auto;
+						.contact-item {
+							display: grid;
+							.icon {
+								grid-template-columns: 2rem 1fr;
+								span {
+									font-weight: bold;
+								}
+							}
+							p {
+								margin-left: 2rem;
+								line-height: 1.6;
+								// font-size: 0.9rem;
+								text-align: initial;
+							}
+						}
+					}
+				}
+				.contact-icons {
+					width: 100%;
+					.contact-icon {
+						margin: 1rem 0;
+						a {
+							width: 3rem;
+							height: 2.5rem;
+							i {
+								font-size: 1.2rem;
+							}
+						}
+					}
+				}
+				.right-contact {
+					display: grid;
+					justify-items: center;
+					margin-top: 2rem;
+					h4 {
+						font-size: 1.5rem;
+					}
+					.contact-form {
+						width: 75vw;
+						.input-control {
+							margin: 1.2rem 0;
+						}
+						.submit-btn {
+							margin-left: 1rem;
+							justify-content: center;
+						}
+					}
+				}
+			}
+		}
+	}
+	.controls {
+		top: auto;
+		bottom: 0;
+		flex-direction: row;
+		justify-content: center;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 100%;
+		background-color: var(--color-grey-5);
+		.control {
+			margin: 0.5rem 0.8rem;
+			width: 50px;
+			height: 50px;
+		}
+	}
+}
+@media screen and (max-width: 412px) {
+	.section {
+		padding: 3.5rem 1.5rem;
+		.contact-container {
+			.main-title {
+				h2 {
+					font-size: 2rem;
+					.bg-text {
+						font-size: 3rem;
+					}
+				}
+			}
+			.contact-content-con {
+				.left-contact {
+					.contact-info {
+						.contact-item {
+							display: grid;
+							flex-direction: column;
+							align-items: baseline;
+						}
+					}
+				}
+				.right-contact {
+					.contact-form {
+						.submit-btn {
+							justify-content: center;
+						}
+					}
+				}
+			}
+		}
+	}
+	.controls {
+		.control {
+			margin: 0.5rem 0.5rem;
+			width: 40px;
+			height: 40px;
 		}
 	}
 }
