--- a/css/styles.css
+++ b/css/styles.css
@@ -152,10 +152,11 @@ section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   min-height: 100vh;
+  gap: 2rem;
 }
 .header-content .left-header {
-  display: flex;
-  align-items: center;
+  display: grid;
+  align-items: end;
   position: relative;
 }
 .header-content .left-header .h-shape {
@@ -169,14 +170,15 @@ section {
   z-index: -1;
   clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
 }
-.header-content .image {
+.header-content .left-header .image {
+  display: flex;
+  align-items: flex-end;
   border-radius: var(--br-sm-2);
   height: 100vh;
   width: 100%;
-  margin-left: 7rem;
   transition: all 0.4s ease-in-out;
 }
-.header-content .image img {
+.header-content .left-header .image img {
   border-radius: var(--br-sm-2);
   width: 100%;
   height: 100%;
@@ -184,24 +186,28 @@ section {
   transition: all 0.4s ease-in-out;
   filter: grayscale(100%);
 }
-.header-content .image img:hover {
+.header-content .left-header .image img:hover {
   filter: grayscale(0);
 }
 .header-content .right-header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-right: 18rem;
+  padding-right: 15rem;
 }
-.header-content .name {
+.header-content .right-header .name {
   font-size: 3rem;
 }
-.header-content .name span {
+.header-content .right-header .name span {
   color: var(--color-secondary);
 }
-.header-content p {
+.header-content .right-header h1 {
+  text-align: start;
+}
+.header-content .right-header p {
   margin: 1.5rem 0;
   line-height: 2rem;
+  text-align: justify;
 }
 
 .about-container {
@@ -706,6 +712,12 @@ section {
   header {
     padding: 0;
   }
+  .section .header-content .left-header .image img {
+    height: 90%;
+  }
+  .section .header-content .right-header {
+    padding-right: 12rem;
+  }
   .section .contact-container {
     width: 80%;
     margin: 0 auto;
@@ -754,72 +766,54 @@ section {
     margin-top: 1.5rem;
   }
 }
-@media screen and (max-width: 1070px) {
+@media screen and (max-width: 1024px) {
   header {
     padding: 0;
   }
-  .section {
-    padding: 4rem 8rem 7rem 5rem;
+  .section .header-content .left-header .image {
+    margin: 0;
   }
-  .section .about-container {
-    grid-template-columns: 1fr;
+  .section .header-content .left-header .image img {
+    height: 80%;
   }
-  .section .about-container .right-about {
-    padding-top: 2.5rem;
+  .section .header-content .right-header {
+    padding-right: 8rem;
   }
-  .section .portfolios {
-    grid-template-columns: 1fr 1fr;
-  }
-  .section .blogs {
-    grid-template-columns: 1fr 1fr;
-  }
-  .section .main-title h2 {
-    font-size: 3rem;
-  }
-  .section .main-title h2 .bg-text {
-    font-size: 5rem;
-  }
-  .section .contact-container .contact-content-con {
-    margin-top: 2rem;
-    left: 23vw;
-    gap: 1rem;
-  }
-  .section .contact-container .contact-content-con .left-contact .contact-info {
-    width: 46vw;
-  }
-  .section .contact-container .contact-content-con .right-contact .contact-form .submit-btn {
-    justify-content: center;
-    margin-left: 0;
-  }
-  .controls .control {
-    width: 3rem;
-    height: 3rem;
-  }
-  .theme-btn {
-    width: 3rem;
-    height: 3rem;
-  }
-  .theme-btn i {
-    font-size: 1.5rem;
+  .section .header-content .right-header .name {
+    font-size: 2.5rem;
   }
 }
 @media screen and (max-width: 970px) {
   .section {
-    padding: 4rem 2.5rem;
+    padding: 4rem 5rem;
   }
   .section .header-content {
+    min-height: 85vh;
     grid-template-columns: 1fr;
-    padding-bottom: 6rem;
+    align-content: stretch;
+    gap: 0;
+  }
+  .section .header-content .left-header {
+    align-content: stretch;
+    justify-items: center;
+    align-items: flex-end;
   }
   .section .header-content .left-header .h-shape {
     display: none;
   }
   .section .header-content .left-header .image {
-    margin: 0 auto;
-    width: 70%;
-    height: 60vh;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+  }
+  .section .header-content .left-header .image img {
+    width: 30%;
+    box-shadow: 0px 30px 13px -27px #000000;
   }
   .section .header-content .right-header {
+    display: grid;
+    justify-items: center;
+    align-content: space-between;
     padding: 0;
     grid-row: 1;
     width: 90%;
@@ -830,6 +824,12 @@ section {
   }
   .section .header-content .right-header .name p {
     text-align: justify;
+  }
+  .section .header-content .right-header .btn-con .main-btn .btn-text {
+    padding: 0 1rem;
+  }
+  .section .header-content .right-header .btn-con .main-btn .btn-icon {
+    padding: 0.7rem;
   }
   .section .contact-container {
     width: 75%;
@@ -886,8 +886,8 @@ section {
   .section {
     padding: 3.5rem 2.5rem;
   }
-  .section header {
-    padding: 0;
+  .section .header-content {
+    min-height: 86vh;
   }
   .section .main-title h2 {
     font-size: 2rem;
@@ -1016,9 +1016,25 @@ section {
     height: 50px;
   }
 }
-@media screen and (max-width: 412px) {
+@media screen and (max-width: 480px) {
   .section {
-    padding: 3.5rem 1.5rem;
+    padding: 4rem 0rem 4rem 0rem;
+  }
+  .section .header-content .right-header {
+    width: 85vw;
+  }
+  .section .header-content .right-header .name {
+    font-size: 1.5rem;
+  }
+  .section .header-content .right-header p {
+    font-size: 1rem;
+  }
+  .section .header-content .right-header .btn-con .main-btn .btn-text {
+    padding: 0 0.5rem;
+    font-size: 0.8rem;
+  }
+  .section .header-content .right-header .btn-con .main-btn .btn-icon {
+    padding: 0.5rem;
   }
   .section .contact-container .main-title h2 {
     font-size: 2rem;
@@ -1035,7 +1051,7 @@ section {
     justify-content: center;
   }
   .controls .control {
-    margin: 0.5rem 0.5rem;
+    margin: 0.5rem 0.8rem;
     width: 40px;
     height: 40px;
   }
