--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -163,10 +163,11 @@ section {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	min-height: 100vh;
+  gap: 2rem;
 	// left side of the header
 	.left-header {
-		display: flex;
-		align-items: center;
+		display: grid;
+		align-items: end;
 		position: relative;
 		.h-shape {
 			transition: all 0.4s ease-in-out;
@@ -179,45 +180,49 @@ section {
 			z-index: -1;
 			clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
 		}
-	}
-	.image {
-		border-radius: var(--br-sm-2);
-		height: 100vh;
-		width: 100%;
-		margin-left: 7rem;
-		// background-color: var(--color-black);
-		transition: all 0.4s ease-in-out;
-		img {
+		.image {
+      display: flex;
+      align-items: flex-end;
 			border-radius: var(--br-sm-2);
+			height: 100vh;
 			width: 100%;
-			height: 100%;
-			object-fit: contain;
 			transition: all 0.4s ease-in-out;
-			filter: grayscale(100%);
-			&:hover {
-				filter: grayscale(0);
+			img {
+				border-radius: var(--br-sm-2);
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+				transition: all 0.4s ease-in-out;
+				filter: grayscale(100%);
+				&:hover {
+					filter: grayscale(0);
+				}
 			}
 		}
 	}
+  // right side of the header
 	.right-header {
 		// color: var(--color-white);
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		padding-right: 18rem;
-	}
-	.name {
-		font-size: 3rem;
-		span {
-			color: var(--color-secondary);
+		padding-right: 15rem;
+		.name {
+			font-size: 3rem;
+			span {
+				color: var(--color-secondary);
+			}
+		}
+		h1 {
+			text-align: start;
+		}
+		p {
+			margin: 1.5rem 0;
+			line-height: 2rem;
+			text-align: justify;
 		}
 	}
-	p {
-		margin: 1.5rem 0;
-		line-height: 2rem;
-	}
 }
-// right side of the header
 
 // ABOUT SECTION
 .about-container {
@@ -545,10 +550,10 @@ section {
 
 // Contact Section
 .contact-content-con {
-  left: 12rem;
-  display: flex;
+	left: 12rem;
+	display: flex;
 	margin-top: 5rem;
-  gap: 5rem;
+	gap: 5rem;
 	.left-contact {
 		.left-contact-des {
 			margin: 1rem 0;
@@ -557,7 +562,7 @@ section {
 		}
 		.contact-info {
 			width: 35vw;
-      padding: 2.7rem 2rem;
+			padding: 2.7rem 2rem;
 			.contact-item {
 				display: flex;
 				align-items: center;
@@ -565,7 +570,7 @@ section {
 				p {
 					margin: 0.5rem 0;
 					padding: 0;
-          line-height: 2.2rem;
+					line-height: 2.2rem;
 				}
 				.icon {
 					display: grid;
@@ -618,7 +623,7 @@ section {
 			text-transform: uppercase;
 		}
 		.contact-form {
-      width: 30vw;
+			width: 30vw;
 			.input-control {
 				margin: 1.5rem;
 				input,
