--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -3,6 +3,18 @@
 		padding: 0;
 	}
 	.section {
+		.header-content {
+			.left-header {
+				.image {
+					img {
+						height: 90%;
+					}
+				}
+			}
+			.right-header {
+				padding-right: 12rem;
+			}
+		}
 		.contact-container {
 			width: 80%;
 			margin: 0 auto;
@@ -21,7 +33,7 @@
 				position: absolute;
 				left: 25vw;
 				width: 50vw;
-        gap: 1rem;
+				gap: 1rem;
 				.left-contact {
 					display: flex;
 					flex-direction: column;
@@ -56,90 +68,135 @@
 		}
 	}
 }
-
-@media screen and (max-width: 1070px) {
+// iPAD pro
+@media screen and (max-width: 1024px) {
 	header {
 		padding: 0;
 	}
 	.section {
-		padding: 4rem 8rem 7rem 5rem;
-		.about-container {
-			grid-template-columns: 1fr;
-			.right-about {
-				padding-top: 2.5rem;
-			}
-		}
-
-		.portfolios {
-			grid-template-columns: 1fr 1fr;
-		}
-		.blogs {
-			grid-template-columns: 1fr 1fr;
-		}
-
-		.main-title {
-			h2 {
-				font-size: 3rem;
-				.bg-text {
-					font-size: 5rem;
-				}
-			}
-		}
-		.contact-container {
-			.contact-content-con {
-				margin-top: 2rem;
-				left: 23vw;
-        gap: 1rem;
-				.left-contact {
-					.contact-info {
-						width: 46vw;
-					}
-				}
-				.right-contact {
-					.contact-form {
-						.submit-btn {
-							justify-content: center;
-							margin-left: 0;
-						}
+		.header-content {
+			.left-header {
+				// display: flex;
+				// flex-direction: column;
+				.image {
+					margin: 0;
+					img {
+						height: 80%;
 					}
 				}
 			}
-		}
-	}
-	.controls {
-		.control {
-			width: 3rem;
-			height: 3rem;
-		}
-	}
-	.theme-btn {
-		width: 3rem;
-		height: 3rem;
-		i {
-			font-size: 1.5rem;
+			.right-header {
+				padding-right: 8rem;
+				.name {
+					font-size: 2.5rem;
+				}
+			}
 		}
 	}
 }
 
+// @media screen and (max-width: 971px) {
+// 	.section {
+// 		.header-content {
+// 			.right-header {
+// 				padding-right: 10rem;
+// 				p {
+// 					text-align: justify;
+// 				}
+// 				.btn-con {
+// 					.main-btn {
+// 						.btn-text {
+// 							padding: 0 1rem;
+// 						}
+// 						.btn-icon {
+// 							padding: 0.8rem;
+// 						}
+// 					}
+// 					align-self: center;
+// 				}
+// 			}
+// 		}
+// 		.about-container {
+// 			grid-template-columns: 1fr;
+// 			.right-about {
+// 				padding-top: 2.5rem;
+// 			}
+// 		}
+
+// 		.portfolios {
+// 			grid-template-columns: 1fr 1fr;
+// 		}
+// 		.blogs {
+// 			grid-template-columns: 1fr 1fr;
+// 		}
+
+// 		.main-title {
+// 			h2 {
+// 				font-size: 3rem;
+// 				.bg-text {
+// 					font-size: 5rem;
+// 				}
+// 			}
+// 		}
+// 		.contact-container {
+// 			.contact-content-con {
+// 				margin-top: 2rem;
+// 				left: 23vw;
+// 				gap: 1rem;
+// 				.left-contact {
+// 					.contact-info {
+// 						width: 46vw;
+// 					}
+// 				}
+// 				.right-contact {
+// 					.contact-form {
+// 						.submit-btn {
+// 							justify-content: center;
+// 							margin-left: 0;
+// 						}
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+// 	.controls {
+// 		.control {
+// 			width: 3rem;
+// 			height: 3rem;
+// 		}
+// 	}
+// }
+
 @media screen and (max-width: 970px) {
 	.section {
-		padding: 4rem 2.5rem;
+		padding: 4rem 5rem;
 
 		.header-content {
+			min-height: 85vh;
 			grid-template-columns: 1fr;
-			padding-bottom: 6rem;
-
+			align-content: stretch;
+			gap: 0;
 			.left-header {
+				align-content: stretch;
+				justify-items: center;
+				align-items: flex-end;
 				.h-shape {
 					display: none;
 				}
 				.image {
-					margin: 0 auto;
-					width: 70%;
-					height: 60vh;
+					display: flex;
+					justify-content: center;
+					height: 100%;
+					img {
+						width: 30%;
+						box-shadow: 0px 30px 13px -27px #000000;
+					}
 				}
 			}
 			.right-header {
+				display: grid;
+				justify-items: center;
+				align-content: space-between;
 				padding: 0;
 				grid-row: 1;
 				width: 90%;
@@ -148,6 +205,16 @@
 					font-size: 2rem;
 					p {
 						text-align: justify;
+					}
+				}
+				.btn-con {
+					.main-btn {
+						.btn-text {
+							padding: 0 1rem;
+						}
+						.btn-icon {
+							padding: 0.7rem;
+						}
 					}
 				}
 			}
@@ -181,7 +248,6 @@
 						// .submit-btn {
 						// 	margin-left: 8rem;
 						// }
-            
 					}
 				}
 			}
@@ -215,8 +281,16 @@
 @media screen and (max-width: 767px) {
 	.section {
 		padding: 3.5rem 2.5rem;
-		header {
-			padding: 0;
+		.header-content {
+			min-height: 86vh;
+			.right-header {
+			}
+			.left-header {
+				.image {
+					img {
+					}
+				}
+			}
 		}
 
 		.main-title {
@@ -334,12 +408,12 @@
 						}
 						.submit-btn {
 							justify-content: center;
-              .btn-text{
-                padding: 0.1rem 1rem;
-              }
-              .btn-icon{
-                padding: 0.5rem;
-              }
+							.btn-text {
+								padding: 0.1rem 1rem;
+							}
+							.btn-icon {
+								padding: 0.5rem;
+							}
 						}
 					}
 				}
@@ -362,9 +436,31 @@
 		}
 	}
 }
-@media screen and (max-width: 412px) {
+@media screen and (max-width: 480px) {
 	.section {
-		padding: 3.5rem 1.5rem;
+		padding: 4rem 0rem 4rem 0rem;
+		.header-content {
+			.right-header {
+				width: 85vw;
+				.name {
+					font-size: 1.5rem;
+				}
+				p {
+					font-size: 1rem;
+				}
+				.btn-con {
+					.main-btn {
+						.btn-text {
+							padding: 0 0.5rem;
+              font-size: 0.8rem;
+						}
+						.btn-icon {
+              padding: 0.5rem;
+						}
+					}
+				}
+			}
+		}
 		.contact-container {
 			.main-title {
 				h2 {
@@ -396,7 +492,7 @@
 	}
 	.controls {
 		.control {
-			margin: 0.5rem 0.5rem;
+			margin: 0.5rem 0.8rem;
 			width: 40px;
 			height: 40px;
 		}
